Rename /statistics to /stats
